Fix spacing/display of reset button and launcher notification

--- a/launchcontainer/static/css/launchcontainer.css
+++ b/launchcontainer/static/css/launchcontainer.css
@@ -11,7 +11,10 @@
 div#launcher_notification {
   padding: 10px;
   margin: 10px 0;
-  display: inline-block;
+}
+
+div#launcher_notification.hide {
+  visibility: hidden;
 }
 
 div#launcher_notification p {
@@ -21,3 +24,4 @@ div#launcher_notification p {
 #launcher_submit {
   padding: 10px;
 }
+
